--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="http://127.0.0.1:5500/elements.html" class="image"><img src="images/covid 19.jpeg" alt="" /></a>
+									<a href="elements.html" class="image"><img src="images/covid 19.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">DATA VISUALIZATION AND MAPPING USING R STUDIO AND QGIS</h2>
 										<p>In this project, I use R Studio and QGIS (a geographical information system application) in visualizing the number of deaths that occurred in care homes in Wales during the COVID-19 Pandemic.</p>
-										<a href="http://127.0.0.1:5500/elements.html" class="special">Learn more</a>
+										<a href="elements.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
