--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/mbjvenng">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
